# RealTalk

./: .gitignore  CLAUDE.md  Memory.md  Progress.md  pyproject.toml
docs/: MESSAGES.md  PLAN_LiveKit_Migration.md  audio_pipeline_architecture.md  streaming_architecture_analysis.md  tts_streaming_analysis.md  vad_control_algorithm.md  websocket_api_specification.md
docs/plan/: README.md  phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md
memory/: MEMORY.md
src/realtalk/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  messages.py
src/realtalk/cognition/: __init__.py  conversation.py  llm.py  sentence_divider.py  streaming_pipeline.py  streaming_types.py  tts.py  tts_task_manager.py
src/realtalk/core/: __init__.py  orchestrator.py  response_generator.py
src/realtalk/orchestration/: __init__.py  accumulator.py  fsm.py  gatekeeper.py
src/realtalk/perception/: asr.py  vad.py
src/realtalk/transport/: __init__.py  webrtc.py
src/realtalk/web/: __init__.py  message_bus.py  server.py
src/realtalk/web/static/css/: style.css
src/realtalk/web/static/js/: app.js
src/realtalk/web/templates/: index.html
tests/: __init__.py  test_accumulator.py  test_conversation.py  test_fsm.py  test_gatekeeper.py  test_interrupt_detection.py  test_messages.py  test_streaming_pipeline.py
